Upgrade to manifest v2; add what-if.xkcd.com support; release 1.5

--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,32 @@
 {
-   "background_page": "background.html",
-   "content_scripts": [ {
-      "js": ["jquery.min.js", "xkcdhovertext.js"],
-      "matches": [
-      	"http://xkcd.com/*",
-      	"http://xkcd.org/*",
-      	"http://xkcd.net/*",
-      	"http://www.xkcd.com/*",
-      	"http://www.xkcd.org/*",
-      	"http://www.xkcd.net/*",
-      	"http://www.google.com/reader/*",
-      	"https://www.google.com/reader/*"
-      ],
-      "run_at": "document_end"
-   } ],
-   "icons": {
-		"16": "icon16.png",
-		"48": "icon48.png",
-		"128": "icon128.png"
-	},
-   "name": "xkcd hovertext",
-   "options_page": "options.html",
-   "version": "1.4"
+  "manifest_version": 2,
+  "name": "XKCD Hovertext",
+  "description": "This extension replaces native browser title text with a customizable popup for xkcd images.",
+  "version": "1.5",
+  "background": {
+    "scripts": ["options.js", "background.js"],
+    "persistent": false
+  },
+  "content_scripts": [ {
+    "js": ["jquery.min.js", "xkcdhovertext.js"],
+    "css": ["xkcdhovertext.css"],
+    "matches": [
+      "http://xkcd.com/*",
+      "http://xkcd.org/*",
+      "http://xkcd.net/*",
+      "http://www.xkcd.com/*",
+      "http://www.xkcd.org/*",
+      "http://www.xkcd.net/*",
+      "http://what-if.xkcd.com/*",
+      "http://www.google.com/reader/*",
+      "https://www.google.com/reader/*"
+    ],
+    "run_at": "document_end"
+  } ],
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "options_page": "options.html"
 }
